--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         display: inline-block;
       }
     </style>
-    <title>day-bow-bow-chicka-chicka-chaka.staging.pages.dev</title>
+    <title>hi hi hi</title>
   </head>
 
   <body>
