--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         text-transform: uppercase;
         font-family: sans-serif;
         text-align: justify;
+        backround: tomato;
+        color: white;
       }
 
       .breaker {
